fix: :bug: Fix layout issue in main section

--- a/style.css
+++ b/style.css
@@ -314,17 +314,17 @@ main section {
 }
 
 main .section2_wrapper {
-    max-width: 1600px;
+    width: 100%;
     background-image: url(assets/images/flower_foto1.png);
     background-repeat: no-repeat;
-    background-position: right 11%;
+    background-position: right 0;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    margin-top: 140px;
-    margin-bottom: 180px;
+    padding-top: 140px;
+    padding-bottom: 180px;
 }
 
 main .animals_wrapper {
-    max-width: 1600px;
+    max-width: 100%;
     z-index: 1;
     background-image: url(assets/images/palm_foto.png), url(assets/images/strelitzia\ 1.png);
     background-repeat: no-repeat, no-repeat;
@@ -561,7 +561,7 @@ main .section4 .container .arrow {
     width: 69px;
     margin-left: 30px;
     margin-right: 30px;
-    align-self: center;
+    margin-top: 64px;
 
 }
 
@@ -587,7 +587,7 @@ main .section4 .container .widget p {
 
 main .section5-wrapper {
     position: relative;
-    width: 1600px;
+    width: 100%;
     padding-top: 140px;
     padding-bottom: 180px;
     background-image: url(assets/images/leav_foto.png);
